Fix number alignment to match arrow icon

--- a/themes/startwords/assets/scss/article/_notes.scss
+++ b/themes/startwords/assets/scss/article/_notes.scss
@@ -34,6 +34,9 @@
     }
 
     $arrow-icon-size: 26px;
+    /* width from the short side of the note to the outside of the icon */
+    /* arrow point is 70x from right; subtract ~1/2 icon size */
+    $arrow-icon-margin: rem(57px);
 
     /* active footnote */
     li:target {
@@ -66,7 +69,7 @@
             /* align with arrow icon */
             width: $arrow-icon-size;
             text-align: center;
-            right: rem(57px);
+            right: $arrow-icon-margin;
             top: rem(50px);
             font-size: rem(35px);
         }
@@ -83,7 +86,7 @@
         a[role=doc-backlink] {
             position: absolute;
             top: rem(5px);
-            right: rem(57px);  /* arrow point is 70x from right; subtract ~1/2 icon size */
+            right: $arrow-icon-margin;
             width: $arrow-icon-size;
             height: $arrow-icon-size;
             color: transparent;  /* make text transparent */
@@ -100,11 +103,11 @@
             clip-path: polygon(70px 0, 100% 34%, 100% 100%, 0 100%, 0 11%);
 
             &::before {
-                left: rem(25px);
+                left: $arrow-icon-margin;
             }
 
             a[role=doc-backlink] {
-                left: rem(57px);
+                left: $arrow-icon-margin;
             }
         }
 
